@@ -1,3 +1,9 @@
+2004-06-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b178
+
+	* Change: Switch image/album counter to the improved numAccessibleItems()
+
+	* Change: Fix a pluralize_n2/ngettext issue.
+
 2004-06-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b177
 
 	* Change: Text updates to config wizard, cause wizard to forget Guid
